tests/ui/empty.stderr
error: unexpected end of input
 --> tests/ui/empty.rs:3:1
  |
3 | #[efg()]
  | ^^^^^^^^
  |
  = note: this error originates in the attribute macro `efg` (in Nightly builds, run with -Z macro-backtrace for more info)
