tests/ui/empty.rs
use efg::efg;

#[efg()]
struct S;

fn main() {}
